[package]
name = "tl"
version = "0.1.6"
edition = "2021"
authors = ["NewDawn0 (Tom)"]
license = "MIT"
keywords = ["translation", "translate", "translator", "cli translator"]
categories = ["command-line-utilities"]

[dependencies]
const_format = "0.2.30"
html-escape = "0.2.13"
reqwest = { version = "0.11.4", features = ["blocking"] }
tl = "0.2.1"

[lib]
path = "src/lib.rs"
name = "tl_lib"
