[package]
name = "tl"
version = "0.1.7"
edition = "2021"
authors = ["NewDawn0 (Tom)"]
license = "MIT"
keywords = ["translation", "translate", "translator", "cli translator"]
categories = ["command-line-utilities"]

[dependencies]
const_format = "0.2.30"
html-escape = "0.2.13"
reqwest = { version = "0.11.4", features = ["blocking"] }
strum = { version = "0.25.0", features = ["derive"] }
tl = "0.2.1"

[lib]
path = "src/lib.rs"
name = "tl_lib"
