[package]
name = "translate"
version = "2.0.0"
edition = "2021"
authors = ["NewDawn0"]
license = "MIT"
keywords = ["translation", "translate", "translator", "cli translator"]
categories = ["command-line-utilities"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
html-escape = "0.2.13"
reqwest = { version = "0.11.4", features = ["blocking"] }
strum = { version = "0.27.1", features = ["derive"] }
tl = "0.2.1"

[build-dependencies]
cbindgen = "0.28.0"
